вернул команду смены ранга и пофиксил пустые ники